--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,13 @@
   height: 100vh;
   background-size: 100%;
 }
+
+
+@media only screen and (max-width: 500px) {
+
+  .App {
+    text-align: center;
+    background-image: url(./Bg.png);
+    background-image: cover;
+  }
+}
