--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,3 +8,18 @@
   padding: 7%;
   text-align: center;
 }
+
+@media only screen and (max-width: 500px) {
+
+  .data-flex {
+    display: grid;
+  
+    grid-template-columns: repeat(1, 1fr);
+  
+    justify-content: center;
+ 
+    text-align: center;
+  }
+  
+
+}
