--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,10 +1,17 @@
 .form-container{
     padding:5px 35%;
-    /* border: 1px solid blue; */
-    /* height: 100vh; */
+    
 }
 
 .icon-g{
     color:red;
 
 }
+
+@media only screen and (max-width: 500px) {
+
+    .form-container{
+        padding:10px 10%;
+        
+    }
+    }
